
1.02 2019-11-05T13:00:00+0900
 - Fix Docker builds for master and tags #401
 - Fix service worker so it serves fresh assets, closes #402
 - Fix "convos dev" command so it works with webpack
 - Fix loading messages should not be done each time the conversation gain focus
 - Will split messages that are too long, closes #386
 - Will auto detect available themes, closes #404
 - Add support for picking up certificate files in development mode
 - Add "Nord" theme - https://www.nordtheme.com #405

1.01 2019-11-01T13:00:41+0900
 - Add handling for connection protocols #311
 - Add dark mode theme #313
 - Add password field to dialog settings #358
 - Add support for channels with "/" #365
 - Add unread count to hamburger menu #397
 - Add toggling of details to "notice" messages
 - Add upgrade of "http" embeds to "https"
 - Add warning screen to script/convos if started as root
 - Fix HTML entities at the end of links #362
 - Fix "Not Found" page #391
 - Fix duplicate messages after loading messages #396
 - Fix unresponsive hamburger menu while loading a dialog
 - Fix bugs related to join/part/mode events
 - Fix support for setting highlight_keywords
 - Fix loading participants list
 - Bumped alpine version in Dockerfile

1.00 2019-10-26T13:29:41+0900
 - Changed frontend to use https://svelte.dev/ from Vuejs.
 - Changed to using URLs, so you can link directly to conversations and pages
   when chatting.
 - Changed sidebar design to a tree view, where conversations are listed under
   connections.
 - Changed "unread" logic to reset to zero when conversations looses focus.
 - Changed notifications to be rendered as a conversation, with the latest
   notifications in the bottom.
 - Changed notifications to be marked as read, when notifications conversation
   looses focus.
 - Changed from using Material Design Icons to Font Awesome.
 - Changed twemoji, after emojione/joypixels changed their design.
 - Changed autocomplete dropdown to show when trigger character is seen. This