@@ -1,7 +1,7 @@
 package Convos::Controller::Notifications;
 use Mojo::Base 'Mojolicious::Controller';
 
-sub list {
+sub messages {
   my $self = shift->openapi->valid_input or return;
   my $user = $self->backend->user        or return $self->unauthorized;
   my %query;
@@ -12,9 +12,9 @@ sub list {
   $self->delay(
     sub { $user->notifications(\%query, shift->begin) },
     sub {
-      my ($delay, $err, $notifications) = @_;
+      my ($delay, $err, $messages) = @_;
       die $err if $err;
-      $self->render(openapi => {notifications => $notifications});
+      $self->render(openapi => {messages => $messages});
     },
   );
 }
@@ -48,9 +48,9 @@ notifications related actions.
 
 =head1 METHODS
 
-=head2 list
+=head2 messages
 
-See L<Convos::Manual::API/listNotifications>.
+See L<Convos::Manual::API/notificationMessages>.
 
 =head2 read
 
